Fix headers cut off when using nav on small landscape displays

--- a/style.css
+++ b/style.css
@@ -729,7 +729,7 @@ footer {
   justify-content: center;
 }
 
-@media screen and (min-width: 40rem) {
+@media screen and (min-width: 40rem) and (min-height: 26.5rem) {
   section,
   footer {
     margin-top: 0;
